--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <head>
         <meta charset = "uft-8">
         <link href = "CVcss.css" rel = stylesheet>
-        <title> John Robert Smith CV</title>
+        <title> Jean-Marin Monnier CV</title>
     </head> 
     <body>
-        <header>
-            <div class="contenu">
+        <div class="contenu">
+            <header>
                 <div class="bande_noir">
                     <p>
                         &#9776;
@@ -21,7 +21,7 @@
                 </div>
 
                 <div class="photo">
-                    <img src = "image/photoCV.png" alt = "photo du CV">
+                    <img src = "image/photoCV.png" alt = "photo du CV" height="360px" width="360px">
                 </div>
 
                 <div class="presentation">
@@ -41,6 +41,7 @@
                     <input type="button" value="Me Contacter"  ></input>                                <!--  mettre lien  -->
                 </div>
             </header>
+            
             <div class="experience">
                 <h2> EXPERIENCE</h2>
 
