--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- SOURCES 
+https://forum.alsacreations.com/forum.php   Pour les boules
+https://css-tricks.com/snippets/css/a-guide-to-flexbox/   Pour le flexbox de SKILLS
+
+-->
+
+
 <!doctype html>
 <html lang ="fr">
 
