--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- SOURCES 
-https://forum.alsacreations.com/forum.php   Pour les boules
-https://css-tricks.com/snippets/css/a-guide-to-flexbox/   Pour le flexbox de SKILLS
-
+- https://forum.alsacreations.com/forum.php   Pour les boules
+- https://css-tricks.com/snippets/css/a-guide-to-flexbox/   Pour le flexbox de SKILLS
+- Des forums
 -->
 
 
